--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -7,18 +7,6 @@ body {
     color: #fff;
 }
 
-/* h1,
-h2,
-h3 {
-    font-family: "Faculty Glyphic", sans-serif;
-    font-weight: 700;
-    }
-    
-    p {
-        font-family: "Faculty Glyphic", sans-serif;
-        font-weight: 400;
-        } */
-
 header {
     text-align: center;
     margin-bottom: 80px;
@@ -26,7 +14,7 @@ header {
 
 .cards-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 20px;
@@ -35,12 +23,17 @@ header {
 .card {
     border-radius: 5px;
     background-color: #3a3a3a;
-    width: 200px;
+    width: 160px;
     cursor: pointer;
     overflow: hidden;
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     transition: transform 0.3s ease;
+    transition: background-color 0.3s ease;
+}
+
+.card:hover {
+    background-color: #2c2c2c;
 }
 
 .card img {
@@ -48,7 +41,6 @@ header {
     border-radius: 5px;
 }
 
-/* Controle da altura do conteúdo */
 .card-conteudo {
     max-height: 0;
     overflow: hidden;
@@ -79,6 +71,8 @@ nav a {
     font-size: 20px;
     border-radius: 5px;
     margin: 0px 20px;
+    transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
 }
 
 nav a:hover {
