--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -32,6 +32,17 @@ header {
     transition: background-color 0.3s ease;
 }
 
+.card .content-img {
+    width: 100%;
+    height: 160px;
+}
+
+.card .content-img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .card:hover {
     background-color: #2c2c2c;
 }
